fixed error regarding viewing portfolio page on smaller screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -257,6 +257,15 @@ a.nav-pagelink  {
     }
 }
 
+@media screen and (max-width: 900px) {
+    .loverunning, 
+    .whiskeydrop,
+    .msp1 {
+        padding-left: 15px;
+    }
+}
+
+
 
 /*----------------------------------------Contact.html*/
 
